--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway Design</title>
-<link href="resources/css/style.css" type="text/css" rel="stylesheet">
+<link href="Resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -17,13 +17,13 @@
 </div>
 <p></p>
 <h2>Our Process</h2>
-<p><div class="img"><img src=resources/images/identify.svg><p></div>
+<p><div class="img"><img src=Resources/images/identify.svg><p></div>
 <h3>Identify</h3>
 <h4>We focus on the most important details.</h4>
-<p><div class="img"><img src=resources/images/understand.svg><p></div>
+<p><div class="img"><img src=Resources/images/understand.svg><p></div>
 <h3>Understand</h3>
 <h4>We study our projects inside and out.</h4>
-<p><div class="img"><img src=resources/images/execute.svg><p></div>
+<p><div class="img"><img src=Resources/images/execute.svg><p></div>
 <h3>Execute</h3>
 <h4>We put everything we have into our work.</h4>
 <div class="header"><h5>Designed in New York</h5></div>
