Updated index.html and Resources directory files with updated code.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </div>
 <p></p>
 <h2>Our Process</h2>
-<p><div class="img"><img src=Resources/Images/identify.svg><p></div>
+<p><div class="img"><img src="Resources/Images/identify.svg"><p></div>
 <h3>Identify</h3>
 <h4>We focus on the most important details.</h4>
-<p><div class="img"><img src=Resources/Images/understand.svg><p></div>
+<p><div class="img"><img src="Resources/Images/understand.svg"><p></div>
 <h3>Understand</h3>
 <h4>We study our projects inside and out.</h4>
-<p><div class="img"><img src=Resources/Images/execute.svg><p></div>
+<p><div class="img"><img src="Resources/Images/execute.svg"><p></div>
 <h3>Execute</h3>
 <h4>We put everything we have into our work.</h4>
 <div class="header"><h5>Designed in New York</h5></div>
